Update favicon link in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
-    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="images/favicon/logo-light.png">
 
     <script src="https://kit.fontawesome.com/524d4ec4f9.js" crossorigin="anonymous"></script>
 
@@ -317,8 +317,8 @@
                                 <div class="clearfix"></div>
                                 <br /><br />
                                 <!--TODO : Implement read more for details--><a
-                                    class="btn btn-dark btn-round btn-medium uppercase" href="#section6"><i
-                                        class="fa fa-play-circle" aria-hidden="true"></i> Know more</a>
+                                    class="btn btn-dark btn-round btn-medium uppercase" href="https://drive.google.com/file/d/1MtrTvbSdp0YMKU8mgUnh6bKe3nC-DvTF/view?usp=sharing"><i
+                                        class="" aria-hidden="true"></i>Resume</a>
                             </div>
                             <!--end item-->
                         </div>
@@ -579,7 +579,7 @@
     <div class="container">
       <div class="content">
         <div class="image-box">
-          <img draggable="false" src="./assets/images/contact1.png" alt="">
+          <img draggable="false" src="./images/contact1.png" alt="">
         </div>
       <form id="contact-form" action="mailto:utkarshpathak@gmail.com" method="POST">
         <p>Feel free to reach out to me for any questions or opportunities!</p>
