Update contact phone number in index.html and change project image names in project.json

--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                                 <strong class="text-dark uppercase">Current City:</strong> <br>Chandigarh, India
                             </address>
                             <span class="text-dark"><strong class="text-dark uppercase">Phone:</strong></span></br>+44
-                            734-003-1018 </span><br>
+                            +91 8303271019 </span><br>
                             <span class="text-dark"><strong
                                     class="text-dark uppercase"></br>Email:</strong></br>utkarshpathak562@gmail.com</span><br>
                             <ul class="footer-social-icons dark left-align icons-plain text-center">
