Update function to handle edge case

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                             <address class="text-dark">
                                 <strong class="text-dark uppercase">Current City:</strong> <br>Chandigarh, India
                             </address>
-                            <span class="text-dark"><strong class="text-dark uppercase">Phone:</strong></span></br>+44
+                            <span class="text-dark"><strong class="text-dark uppercase">Phone:</strong></span></br>
                             +91 8303271019 </span><br>
                             <span class="text-dark"><strong
                                     class="text-dark uppercase"></br>Email:</strong></br>utkarshpathak562@gmail.com</span><br>
