Update image and blog link in index.html

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 <li data-index="rs-1" data-transition="fade">
 
                                     <!-- MAIN IMAGE -->
-                                    <img src="images/slider-grey.jpg" alt="" width="1920" height="1280">
+                                    <img src="images/Slider.jpg" alt="" width="1920" height="1280">
 
                                     <!-- LAYER NR. 1 -->
                                     <div class="tp-caption raleway white uppercase text-white tp-resizeme"
@@ -310,7 +310,7 @@
                                     <ul class="iconlist dark">
                                         <li><i class="fa fa-check"></i> CI/CD, Infrastructure</li>
                                         <li><i class="fa fa-check"></i> DevOps Lifestyle </li>
-                                        <li><i class="fa fa-check"></i> <a href="https://punefoodblog.com" target="_blank">Blog
+                                        <li><i class="fa fa-check"></i> <a href="https://hashnode.com/@utkarsh463" target="_blank">Blog
                                                 writer </a> </li>
                                     </ul>
                                 </div>
